Fixed a failing test